[gd_scene load_steps=3 format=3 uid="uid://djswlids8332j"]

[ext_resource type="Script" path="res://DataTablePlugin/header_column.gd" id="1_or4fs"]

[sub_resource type="LabelSettings" id="LabelSettings_kg40t"]
font_size = 14

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="header_column" type="Label" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "t1111111111"
label_settings = SubResource("LabelSettings_kg40t")
vertical_alignment = 1
text_overrun_behavior = 3
script = ExtResource("1_or4fs")

[node name="dragger" type="Button" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(1, 16)
layout_mode = 2
mouse_default_cursor_shape = 10

[connection signal="button_down" from="dragger" to="header_column" method="_on_dragger_button_down"]
[connection signal="button_up" from="dragger" to="header_column" method="_on_dragger_button_up"]
